project.ext {
    aspectjVersion = '1.8.4'
}

buildscript {
    repositories {
        maven {url "https://maven.eveoh.nl/content/repositories/releases"}
    }

    dependencies {
        classpath "nl.eveoh:gradle-aspectj:1.6"
    }
}

//apply plugin: 'aspectj'

sourceCompatibility = 1.8

dependencies {
	compile gradleApi()
	
	clover 'org.openclover:clover:4.2.0'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.3'
	
	compile project(":common")
	compile project(":stages")
	compile project(":analysis")
	compile project(":model")
	compile project(":service")

	compile 'org.codehaus.mojo:exec-maven-plugin:1.2'
	compile 'net.sourceforge.teetime:teetime:3.0-SNAPSHOT'

	compile 'net.sourceforge.teetime-stages:teetime-stages:3.0-SNAPSHOT'
	compile 'net.kieker-monitoring:kieker:1.14-SNAPSHOT'
    
	compile 'org.eclipse.emf:org.eclipse.emf.ecore:2.11.1-v20150805-0538'
	compile 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.11.+'
	compile 'org.eclipse.emf:org.eclipse.emf.common:2.11.+'
	compile 'org.eclipse.emf:org.eclipse.emf.mwe.core:1.3.20+'
	compile 'org.eclipse.uml2:org.eclipse.uml2.types:2.0.0+'
    compile 'org.eclipse.platform:org.eclipse.equinox.common:3.8.0+'
		
	compile 'org.apache.logging.log4j:log4j-api:2.6.2'
	compile 'org.apache.logging.log4j:log4j-core:2.6.2'
	compile 'org.apache.jclouds:jclouds-all:2.0.1+'
	
	compile 'junit:junit:4.11'
	
	compile 'org.antlr:antlr-runtime:3.5.2' 

	compile 'nz.ac.waikato.cms.weka:weka-stable:3.6.13'
		
	compile 'extra:de.uka.ipd.sdq.identifier:2.1.0.201511050934'

	compile 'extra:org.palladiosimulator.pcm:4.0.2+'
	compile 'extra:org.palladiosimulator.pcm.resources:4.0.0+'
	compile 'extra:org.palladiosimulator.pcm.privacy:4.0.2.2017-05-31'
	compile 'extra:org.palladiosimulator.pcm.cloud:1.0.0+'
	compile 'extra:org.palladiosimulator.analyzer.workflow:1.0.0+'
	compile 'extra:org.palladiosimulator.analyzer.completions:1.0.0+'
	compile 'extra:org.palladiosimulator.analyzer.resultdecorator:1.0.0+'
	compile 'extra:org.palladiosimulator.analyzer.quality:1.0.0+'
	compile 'extra:org.palladiosimulator.solver:3.0.0+'
	compile 'extra:org.palladiosimulator.solver.context:2.0.0+'

	compile 'extra:de.uka.ipd.sdq.stoex:2.2.0+'
	compile 'extra:de.uka.ipd.sdq.units:2.1.0.201511050934'
	compile 'extra:de.uka.ipd.sdq.probfunction:2.1.0+'
	compile 'extra:de.uka.ipd.sdq.probfunction.math:2.0.2+'
	compile 'extra:de.uka.ipd.sdq.pcm.cost:1.0.0+'
	compile 'extra:de.uka.ipd.sdq.pcm.designdecision:1.3.0+'
	compile 'extra:de.uka.ipd.sdq.featuremodel:2.1.0+'
	compile 'extra:de.uka.ipd.sdq.tcfmoop:1.0.0+'
	compile 'extra:de.uka.ipd.sdq.dsexplore.qml:1.0.0+'
	compile 'extra:de.uka.ipd.sdq.workflow.launchconfig:2.1.0+'
	compile 'extra:de.uka.ipd.sdq.workflow:2.1.1+'
	compile 'extra:de.uka.ipd.sdq.workflow.mdsd:2.1.1+'
	compile 'extra:de.uka.ipd.sdq.errorhandling:1.0.0+'

	compile 'extra:org.eclipse.emf.cdo:4.5.0.v20160607-1254'
	compile 'extra:org.eclipse.emf.cdo.common:4.5.0.v20160301-1326'
	compile 'extra:org.eclipse.net4j:4.5.0.v20160607-1254'
	compile 'extra:org.eclipse.net4j.util:3.6.0.v20160607-1254'
	compile 'extra:org.eclipse.ocl:3.6.0.v20160523-1914'
	compile 'extra:org.eclipse.ocl.common:1.4.0.v20160521-2033'
	compile 'extra:org.eclipse.ocl.ecore:3.6.0.v20160523-1914'

	compile 'extra:lpg.runtime.java:2.0.17.v201004271640'	

	compile 'org.neo4j:neo4j:3.2.0'

	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
	testCompile 'org.powermock:powermock-core:1.6.1',
            'org.powermock:powermock-module-junit4:1.6.1',
            'org.powermock:powermock-api-mockito:1.6.1'
	
	compile 'com.neovisionaries:nv-i18n:1.20'
}

sourceSets {
	irl {
		java {
			srcDir 'src/main/irl'
		}
    }
    main {
    	java {
    		srcDir 'src/main/java'
			srcDir 'src/gen/java'
			srcDir 'src/gen/java-factory'
//    		srcDir 'src/main/aspectj'
    	}
    }
    
}

clover {
	report {
		html=true
	}
	
}

install {
    repositories.mavenInstaller {
        pom.version = version
        pom.groupId = 'org.iobserve'
        pom.artifactId = 'analysis'
    }
}

